@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<testsuite name="test_errorfail_output" errors="1" failures="1" tests="1" time="0.0053797" hostname="unknown" timestamp="2015-01-06T18:00:41">
+<testsuite name="test_errorfail_output" errors="1" failures="1" tests="1" time="0.0071423" hostname="unknown" timestamp="2015-01-07T09:37:03">
   <properties/>
   <testcase classname="test_errorfail_output" name="test_success">
     <error>
