@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<testsuite name="test_success_output" errors="0" failures="0" tests="1" time="0.0028318" hostname="unknown" timestamp="2015-01-06T18:00:41">
+<testsuite name="test_success_output" errors="0" failures="0" tests="1" time="0.0034845" hostname="unknown" timestamp="2015-01-07T09:37:03">
   <properties/>
   <testcase classname="test_success_output" name="test_success"/>
   <system-out/>
