@@ -9,6 +9,8 @@ mlUnit development snapshot
   - Added support for partial stack comparison in assert_error.
   - Test suite functions may declare their host function on the first or
     succeeding lines.
+  - assert_equals failure prints differences on top of each other, instead of
+    next to teach other for improved readability
 
   - Fix: build.xml did not execute mlUnit tests; report directory was not being
     created; MATLAB automation options conflicted; MATLAB property check failed.
